--- a/scss/positioning.scss
+++ b/scss/positioning.scss
@@ -6,7 +6,7 @@
 
 #births {
 	top: 13%;
-	left: 52%;
+	left: 48%;
 }
 
 #inpatient-days {
